{
  "version": 4,
  "terraform_version": "0.14.9",
  "serial": 91,
  "lineage": "29c9f33d-f9a4-753f-8daf-b33be7a87c1c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "sepehr_eip1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-09a23c8ccdd1ec7b7",
            "domain": "vpc",
            "id": "eipalloc-0c8863807b6effa7e",
            "instance": "i-0dc63bd9dca95b9ca",
            "network_border_group": "us-west-2",
            "network_interface": "eni-09f9b757721242d87",
            "private_dns": "ip-192-168-1-31.us-west-2.compute.internal",
            "private_ip": "192.168.1.31",
            "public_dns": "ec2-44-242-129-129.us-west-2.compute.amazonaws.com",
            "public_ip": "44.242.129.129",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "sepehr_eip1"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.ubuntu1",
            "aws_network_interface.sepehr_interface1",
            "aws_security_group.allow_ssh",
            "aws_subnet.sepehr_subnet1",
            "aws_vpc.sepehr_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "sepehr_eip2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-08423e87d50f3c20a",
            "domain": "vpc",
            "id": "eipalloc-08aaf3395e2dd96e5",
            "instance": "i-0a3cc3efd7a72b405",
            "network_border_group": "us-west-2",
            "network_interface": "eni-04844bf135f070724",
            "private_dns": "ip-192-168-1-235.us-west-2.compute.internal",
            "private_ip": "192.168.1.235",
            "public_dns": "ec2-54-244-104-119.us-west-2.compute.amazonaws.com",
            "public_ip": "54.244.104.119",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "sepehr_eip2"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.ubuntu2",
            "aws_network_interface.sepehr_interface2",
            "aws_security_group.allow_ssh",
            "aws_subnet.sepehr_subnet1",
            "aws_vpc.sepehr_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ubuntu1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ca5c3bd5a268e7db",
            "arn": "arn:aws:ec2:us-west-2:945345488425:instance/i-0dc63bd9dca95b9ca",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dc63bd9dca95b9ca",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "sepehr_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-09f9b757721242d87"
              }
            ],
            "primary_network_interface_id": "eni-09f9b757721242d87",
            "private_dns": "ip-192-168-1-31.us-west-2.compute.internal",
            "private_ip": "192.168.1.31",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-074e576517235e4bc",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c088d94141a86bb7",
            "tags": {
              "Name": "ubuntu1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-084aafb559a7a8df5"
            ]
          },
          "dependencies": [
            "aws_network_interface.sepehr_interface1",
            "aws_security_group.allow_ssh",
            "aws_subnet.sepehr_subnet1",
            "aws_vpc.sepehr_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ubuntu2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ca5c3bd5a268e7db",
            "arn": "arn:aws:ec2:us-west-2:945345488425:instance/i-0a3cc3efd7a72b405",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a3cc3efd7a72b405",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "sepehr_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-04844bf135f070724"
              }
            ],
            "primary_network_interface_id": "eni-04844bf135f070724",
            "private_dns": "ip-192-168-1-235.us-west-2.compute.internal",
            "private_ip": "192.168.1.235",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0dbcfc432619538cc",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c088d94141a86bb7",
            "tags": {
              "Name": "ubuntu2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-084aafb559a7a8df5"
            ]
          },
          "dependencies": [
            "aws_network_interface.sepehr_interface2",
            "aws_security_group.allow_ssh",
            "aws_subnet.sepehr_subnet1",
            "aws_vpc.sepehr_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "sepehr_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:945345488425:internet-gateway/igw-0461720c5101a4b4e",
            "id": "igw-0461720c5101a4b4e",
            "owner_id": "945345488425",
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-09695513a5c64f633"
          },
          "dependencies": [
            "aws_vpc.sepehr_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "sepehr_interface1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-09f9b757721242d87",
            "ipv6_address_count": 0,
            "mac_address": "06:dd:d2:5a:fd:ed",
            "private_ip": "192.168.1.31",
            "private_ips": [
              "192.168.1.31"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-084aafb559a7a8df5"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c088d94141a86bb7",
            "tags": {
              "Name": "sepehr_interface1"
            }
          },
          "dependencies": [
            "aws_security_group.allow_ssh",
            "aws_subnet.sepehr_subnet1",
            "aws_vpc.sepehr_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "sepehr_interface2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-04844bf135f070724",
            "ipv6_address_count": 0,
            "mac_address": "06:4f:6a:87:1b:a1",
            "private_ip": "192.168.1.235",
            "private_ips": [
              "192.168.1.235"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-084aafb559a7a8df5"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c088d94141a86bb7",
            "tags": {
              "Name": "sepehr_interface2"
            }
          },
          "dependencies": [
            "aws_security_group.allow_ssh",
            "aws_subnet.sepehr_subnet1",
            "aws_vpc.sepehr_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "sepehr_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-030297d05466ad109",
            "owner_id": "945345488425",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0461720c5101a4b4e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sepehr"
            },
            "vpc_id": "vpc-09695513a5c64f633"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.sepehr_gateway",
            "aws_vpc.sepehr_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sepehr_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fbd716c0b96b27c3",
            "route_table_id": "rtb-030297d05466ad109",
            "subnet_id": "subnet-0c088d94141a86bb7"
          },
          "dependencies": [
            "aws_internet_gateway.sepehr_gateway",
            "aws_route_table.sepehr_route_table",
            "aws_subnet.sepehr_subnet1",
            "aws_vpc.sepehr_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:945345488425:security-group/sg-084aafb559a7a8df5",
            "description": "Allow SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-084aafb559a7a8df5",
            "ingress": [
              {
                "cidr_blocks": [
                  "205.250.164.243/32"
                ],
                "description": "SSH to VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "945345488425",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-09695513a5c64f633"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sepehr_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sepehr_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:945345488425:subnet/subnet-0c088d94141a86bb7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-0c088d94141a86bb7",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "945345488425",
            "tags": {
              "Name": "sepehr_subnet1"
            },
            "tags_all": {
              "Name": "sepehr_subnet1"
            },
            "vpc_id": "vpc-09695513a5c64f633"
          },
          "dependencies": [
            "aws_vpc.sepehr_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "sepehr_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:945345488425:vpc/vpc-09695513a5c64f633",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-02904beab3cb53576",
            "default_route_table_id": "rtb-0d1672de7525b3af3",
            "default_security_group_id": "sg-007f303e6ca026cee",
            "dhcp_options_id": "dopt-77c69f0f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-09695513a5c64f633",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d1672de7525b3af3",
            "owner_id": "945345488425",
            "tags": {
              "Name": "sepehr_vpc"
            },
            "tags_all": {
              "Name": "sepehr_vpc"
            }
          }
        }
      ]
    }
  ]
}